<resources>
    <string name="app_name">bassem</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="sing_up">Sing Up</string>
    <string name="error_name_register">please Add your Name</string>
    <string name="error_pass">please add passsword</string>
    <string name="erorr_email">please add email</string>
    <string name="erorr_phone">please add phone</string>
</resources>